--- a/po/wesnoth/gl.po
+++ b/po/wesnoth/gl.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-12-19 15:14+0100\n"
-"PO-Revision-Date: 2011-11-09 21:33+0100\n"
+"PO-Revision-Date: 2011-12-28 22:55+0100\n"
 "Last-Translator: Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail."
 "com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
@@ -24,6 +24,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"com>\n"
 "com>\n"
 "com>\n"
 "com>\n"
@@ -5251,7 +5252,7 @@ msgstr "Activar ou desactivar o modo de planificación."
 
 #: src/menu_events.cpp:2635
 msgid "Access whiteboard options dialog."
-msgstr "Acceder ao diálogo de opcións do taboleiro."
+msgstr "Acceder ao diálogo de opcións de planificación."
 
 #: src/menu_events.cpp:2678
 msgid "Unknown debug level: '$level'."
@@ -6874,7 +6875,7 @@ msgstr "Agochar os plans de $player"
 
 #: src/whiteboard/manager.cpp:1088
 msgid "Whiteboard Options"
-msgstr "Opcións do taboleiro"
+msgstr "Opcións de planificación"
 
 # Optimizado para baixas resolucións.
 #~ msgid "Download"
